# thunderstore-api-rs

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  generator-config.yaml  justfile
.openapi-generator/: FILES
docs/: ApiApi.md  ApiExperimentalCommunityCategoryList200Response.md  ApiExperimentalCommunityList200Response.md  ApiExperimentalPackageList200Response.md  AvailableCommunity.md  CApi.md  Community.md  CommunityCard.md  CommunityPackageList.md  CompletedPart.md  FrontPageContent.md  IconValidatorParams.md  ManifestV1ValidatorParams.md  PackageCard.md  PackageCategory.md  PackageDependency.md  PackageDetailViewContent.md  PackageExperimental.md  PackageListing.md  PackageListingExperimental.md  PackageSubmissionMetadata.md  PackageSubmissionResult.md  PackageVersion.md  PackageVersionExperimental.md  ReadmeValidatorParams.md  RenderMarkdownParams.md  RenderMarkdownResponse.md  RequestBody.md  ResponseBody.md  UploadPartUrl.md  UserMedia.md  UserMediaFinishUploadParams.md  UserMediaInitiateUploadParams.md  UserMediaInitiateUploadResponse.md  ValidatorResponse.md
src/: lib.rs
src/apis/: api_api.rs  c_api.rs  configuration.rs  mod.rs  v1.rs  v2.rs
src/models/: api_experimental_community_category_list_200_response.rs  api_experimental_community_list_200_response.rs  api_experimental_package_list_200_response.rs  available_community.rs  community.rs  community_card.rs  community_package_list.rs  completed_part.rs  front_page_content.rs  icon_validator_params.rs  manifest_v1_validator_params.rs  mod.rs  package_card.rs  package_category.rs  (+20 more)
(+35 files in other folders)
