[package]
name = "thunderstore-api"
version = "0.3.0"
authors = ["actioninja", "OpenAPI Generator team and contributors"]
edition = "2021"
rust-version = "1.63"
description = "API bindings for the Thunderstore Web API"
repository = "https://github.com/actioninja/thunderstore-api-rs"
license = "MPL-2.0"
keywords = ["thunderkit", "thunderstore", "api", "binding", "openapi"]
categories = ["api-bindings", "game-development"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ts-rs = { version = "6.2", optional = true }
url = "2.2"
uuid = { version = "1.0", features = ["serde"] }

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart"]

[dev-dependencies]
